Fixes #26.  Right nav width in FF and IE bump up to stop word wrap. Adding disc list item types explicitly for FF and IE.

--- a/css/static.css
+++ b/css/static.css
@@ -1,6 +1,5 @@
 #nav{
     top: 0px;
-    height: 75px;
 }
 
 .static-inner{
@@ -260,7 +259,7 @@ body, html{
 }
 
 #staticWrapper .list{
-    list-style: inherit;
+    list-style-type: disc;
     margin-left: 35px;
     display: inline-block;
     font-size: 0.9em;
