--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ body #intro ul li a:hover{
 #headerMenuToggle.threeLines{
     position: fixed;
     right: 25px;
-    top: 15px;
+    top: .8em;
     cursor:pointer;
     z-index: 2;
 }
@@ -175,11 +175,11 @@ section#headerScrollWatch {
 
 /*** right sliding panel ***/
 #rightSideBar{
-    width: 240px;
+    width: 260px;
     height: 100%;
     background-color: #242424;
     position:fixed;
-    right: -240px;
+    right: -260px;
     top: 0;
     z-index: 3;
     padding: 0 35px;
@@ -203,10 +203,10 @@ section#headerScrollWatch {
 }
 
 #rightSideBar.active{
-    -webkit-transform: translateX(-240px);
-    transform: translateX(-240px);
-    -ms-transform:translateX(-240px);
-    -moz-transform:translateX(-240px);
+    -webkit-transform: translateX(-260px);
+    transform: translateX(-260px);
+    -ms-transform:translateX(-260px);
+    -moz-transform:translateX(-260px);
     -moz-transition: all .5s linear 0s; /* This is the animation TO THE RIGHT for the details wrapper */
     -webkit-transition: all .5s linear 0s; /* This is the animation TO THE RIGHT for the details */
     -ms-transition: all .5s linear 0s; /* This is the animation TO THE RIGHT for the details */
